<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey"
    android:layoutDirection="ltr">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/medium_margin"
        android:text="@string/insert_details"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/medium_margin"
        app:layout_constraintBottom_toTopOf="@+id/btnNext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edtName"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:gravity="center_vertical|right"
                android:imeOptions="actionNext"
                android:layout_marginStart="@dimen/medium_margin"
                android:layout_marginTop="@dimen/small_margin"
                android:layout_marginEnd="@dimen/medium_margin"
                android:drawableStart="@drawable/ic_grey_check_circle_24"
                android:hint="@string/name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <EditText
                android:id="@+id/edtLastName"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:layout_marginStart="@dimen/medium_margin"
                android:layout_marginTop="@dimen/small_margin"
                android:layout_marginEnd="@dimen/medium_margin"
                android:imeOptions="actionNext"
                android:gravity="center_vertical|right"
                android:drawableStart="@drawable/ic_grey_check_circle_24"
                android:hint="@string/lastName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <EditText
                android:id="@+id/edtMobile"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:layout_marginStart="@dimen/medium_margin"
                android:layout_marginTop="@dimen/small_margin"
                android:imeOptions="actionNext"
                android:layout_marginEnd="@dimen/medium_margin"
                android:drawableStart="@drawable/ic_grey_check_circle_24"
                android:hint="@string/mobile"
                android:inputType="numberSigned"
                android:maxLines="1"
                android:maxLength="11"
                android:gravity="center_vertical|right"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <EditText
                android:id="@+id/edtPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:layout_marginStart="@dimen/medium_margin"
                android:layout_marginTop="@dimen/small_margin"
                android:layout_marginEnd="@dimen/medium_margin"
                android:gravity="center_vertical|right"
                android:imeOptions="actionNext"
                android:drawableStart="@drawable/ic_grey_check_circle_24"
                android:hint="@string/phoneNumber"
                android:maxLines="1"
                android:maxLength="11"
                android:inputType="numberSigned"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/large_margin"
                android:layout_marginTop="@dimen/small_margin"
                android:background="@color/light_grey" />

            <EditText
                android:id="@+id/edtAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="?actionBarSize"
                android:maxLines="2"
                android:imeOptions="actionDone"
                android:layout_marginStart="@dimen/medium_margin"
                android:layout_marginTop="@dimen/medium_margin"
                android:layout_marginEnd="@dimen/medium_margin"
                android:gravity="center_vertical|right"
                android:drawableStart="@drawable/ic_grey_check_circle_24"
                android:hint="@string/address"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/swGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/medium_margin"
                android:layout_marginTop="@dimen/small_margin"
                android:layout_marginEnd="@dimen/medium_margin"
                android:layout_marginBottom="@dimen/medium_margin"
                android:layoutDirection="rtl"
                android:text="@string/gender"
                android:textOff="@string/male"
                android:textOn="@string/female"
                app:showText="true"
                app:switchTextAppearance="@style/TextAppearance.AppCompat.Medium" />
        </LinearLayout>


    </androidx.core.widget.NestedScrollView>

    <Button
        android:id="@+id/btnNext"
        android:layout_width="0dp"
        android:layout_height="?actionBarSize"
        android:layout_marginStart="@dimen/medium_margin"
        android:layout_marginEnd="@dimen/medium_margin"
        android:layout_marginBottom="@dimen/medium_margin"
        android:text="@string/nextStep"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


<!--    <ProgressBar-->
<!--        android:id="@+id/progressBar"-->
<!--        style="?android:attr/progressBarStyle"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:background="@color/white"-->
<!--        android:padding="@dimen/small_margin"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->

</androidx.constraintlayout.widget.ConstraintLayout>